@@ -1,4 +1,4 @@
-/* $Id: cmd-rename-window.c,v 1.6 2007-10-19 09:21:26 nicm Exp $ */
+/* $Id: cmd-rename-window.c,v 1.7 2007-10-19 17:15:29 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -39,7 +39,7 @@ struct cmd_rename_window_data {
 };
 
 const struct cmd_entry cmd_rename_window_entry = {
-	"rename-window", "renamew", "[-i index] newname",
+	"rename-window", "renamew", "[-i index] new name",
 	0,
 	cmd_rename_window_parse,
 	cmd_rename_window_exec, 
